--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "Cat Phone",
-    "slug": "cat-phone",
+    "name": "CatPhone22",
+    "slug": "CatPhone22",
     "version": "1.0.0",
     "icon": "https://i.ibb.co/ynd5BXtT/Cat-Phone-Bc.png",
     "android": {
-      "package": "com.anakin.catphone",
+      "package": "com.anakin.catphone22",
       "adaptiveIcon": {
         "foregroundImage": "https://i.ibb.co/0RBWwgvK/Birthday-Cat.png",
         "backgroundColor": "#000000"
