--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "CatPhone22",
     "slug": "catphone22",
+    "owner": "gamer20",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
