--- a/eas.json
+++ b/eas.json
@@ -1,10 +1,14 @@
 {
   "build": {
-    "preview": {
+    "production": {
       "android": {
         "buildType": "apk"
       }
     },
-    "production": {}
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    }
   }
 }
