--- a/eas.json
+++ b/eas.json
@@ -1,11 +1,9 @@
 {
+  "cli": {
+    "appVersionSource": "local"
+  },
   "build": {
     "production": {
-      "android": {
-        "buildType": "apk"
-      }
-    },
-    "preview": {
       "android": {
         "buildType": "apk"
       }
