--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "CatPhone22",
     "slug": "catphone22",
-    "owner": "gamer20",
+    "owner": "cattphon",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,7 +20,9 @@
       "package": "com.gamer20.catphone22"
     },
     "extra": {
-      "eas": {}
+      "eas": {
+        "projectId": "adf84018-0948-46aa-9332-5453bf9f9fbd"
+      }
     }
   }
 }
